--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=0.0.1
 author=Fuga Kato
 maintainer=Fuga Kato
 sentence=DWM1001 driver for Arduino and more.
+paragraph=Controls DWM1001 through SPI/UART.
 category=Device Control
 url=https://github.com/NTSC-J/Arduino-DWM1001.git
 architectures=*
 includes=SPI.h
-
